<resources>
    <string name="app_name">AlfredBase</string>
    <string name="printer_app_name">AlfredRemotePrintService</string>
    <string name="sign_in">Sign in</string>
    <string name="sync">Sync</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="resync">Resync</string>
    <string name="open">Open</string>
    <string name="open_restaurant">Open Restaurant</string>
    <string name="start_drawer">Start Drawer</string>
    <string name="enter_amount_of_cash_in_drawer">Enter amount of cash in drawer</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="stored_card">Stored-Card</string>
    <string name="day_sales">Day Sales</string>
    <string name="ent_plu">ENT PLU</string>
    <string name="void_plu">Void PLU</string>
    <string name="devices">Devices</string>
    <string name="summary">Summary</string>
    <string name="save">Save</string>
    <string name="amount">Amount</string>
    <string name="time">Time</string>
    <string name="order_no">Order No </string>
    <string name="max_order_no">Max Order Number</string>
    <string name="no_of_pax">No. of Pax</string>
    <string name="search_menu">Search Menu</string>
    <string name="waiter">WAITER</string>
    <string name="get_bill">Get Bill</string>
    <string name="bill">Bill</string>
    <string name="print">Print Bill</string>
    <string name="discount">Discount</string>
    <string name="unseat">Unseat</string>
    <string name="table">Table</string>
    <string name="transfer_table_failed">Transfer table failed</string>
    <string name="print_transfer_table">print transfer table</string>
    <string name="open_items">Open items</string>
    <string name="open_item_">Open Item</string>
    <string name="takeaway">Takeaway</string>
    <string name="takeaway_summary">TAKEAWAY SUMMARY</string>
    <string name="split_by_pax">Split by pax</string>
    <string name="cannot_split_by_pax">Cannot split by pax</string>
    <string name="fire">Fire</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="qty">Qty</string>
    <string name="subtotal">Subtotal</string>
    <string name="total">Total</string>
    <string name="item">Item</string>
    <string name="taxes">Tax</string>
    <string name="place_order">Place Order</string>
    <string name="grand_total">Grand Total</string>
    <string name="pax">Pax</string>
    <string name="order_id">Order ID</string>
    <string name="order">Order</string>
    <string name="authorization">Authorization</string>
    <string name="manager_id">Manager ID</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="instruction">Instruction</string>
    <string name="remove">Remove</string>
    <string name="void_">Void</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="new_">New</string>
    <string name="new_open_item">New Open Item</string>
    <string name="main_category">Main Category</string>
    <string name="sub_category">Sub Category</string>
    <string name="tax_group">Tax Group</string>
    <string name="kitchen">Kitchen</string>
    <string name="allow_takeaways">Allow Takeaways ?</string>
    <string name="allow_delivery">Allow Delivery ?</string>
    <string name="discountable">Discountable ?</string>
    <string name="quantity">quantity</string>
    <string name="bill_summary">Bill Summary</string>
    <string name="total_due"> Total Due</string>
    <string name="cash">Cash</string>
    <string name="change">Change</string>
    <string name="settlement_details">Settlement Details</string>
    <string name="media">Media</string>
    <string name="delivery">Delivery</string>
    <string name="employee">Employee</string>
    <string name="dine_in">Dine In</string>
    <string name="total_bill">Total Bill</string>
    <string name="custom">Custom</string>
    <string name="voucher">Voucher</string>
    <string name="entertainment">Entertainment</string>
    <string name="guest_name">Guest Name</string>
    <string name="change_amount">Change Amount</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="cashier">Cashier</string>
    <string name="reprint">KOT Reprint</string>
    <string name="print_report">Print Report</string>
    <string name="clear_all">Clear All</string>
    <string name="top_up">Top-up</string>
    <string name="or">Or</string>
    <string name="nett_sales">NETT Sales</string>
    <string name="next_sales_svg">NETT Sales + SVG</string>
    <string name="total_tax">Total Tax</string>
    <string name="total_tax_tvc">Total Tax / SVC</string>
    <string name="total_discount">Total Discount</string>
    <string name="total_amount">Total Amount</string>
    <string name="daily_settlement">Daily Settlement</string>
    <string name="session_sales">Session Sales</string>
    <string name="top_sales_by_employee">Top sales by employee</string>
    <string name="category">Category</string>
    <string name="total_checks">Total checks</string>
    <string name="total_orders">Total orders</string>
    <string name="continue_">Continue</string>
    <string name="any_comments">Any Comments</string>
    <string name="report_day_sale">Day Sales Report</string>
    <string name="gross_total_sales">Gross total sales</string>
    <string name="sales_analysis">Sales Analysis</string>
    <string name="detail_analysis">Detail Analysis</string>
    <string name="summary_analysis">Summary Analysis</string>
    <string name="hourly_analysis">Hourly Analysis</string>
    <string name="type">Type</string>
    <string name="group">Group</string>
    <string name="total_open_items">Total Open Items</string>
    <string name="select_report_print">Select Report to Print</string>
    <string name="all">All</string>
    <string name="today">Today</string>
    <string name="business_date">Business date</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="user_already_clock_in">Users already clocked in</string>
    <string name="succeed">succeed</string>
    <string name="cash_in">Cash In</string>
    <string name="cash_out">Cash Out</string>
    <string name="manually_add_printer">Manually add printer</string>
    <string name="device_scan_tips">Scan QR code to get tablets paired with pos</string>
    <string name="device_scan_tips_manually">OR\nmanually set up POS IP in tablet</string>
    <string name="printer">Printer</string>
    <string name="kds">KDS</string>
    <string name="select_printer_information">Select Printer Information</string>
    <string name="printer_thermal_type">80mm Thermal Printer</string>
    <string name="printer_dotmatrix_type">80mm Dot Matrix Printer</string>
    <string name="printer_ipaddr">Printer IP Address</string>
    <string name="unassign">Unassign</string>
    <string name="print_check">Print Check</string>
    <string name="printing_x_report">Printing X Report</string>
    <string name="print_plu_category">Print PLU Category</string>
    <string name="print_plu_item">Print PLU Item</string>
    <string name="print_plu_modifier">Print PLU Modifier</string>
    <string name="print_hourly_payments">Print Hourly Payments</string>
    <string name="enable_screen_lock">Enable Screen Lock</string>
    <string name="screen_lock_time">Screen Lock Time</string>
    <string name="change_employee_password">Change Employee Password</string>
    <string name="menu_background_setting">Menu background setting</string>
    <string name="connect_manually">Connect Manual</string>
    <string name="no_network">This print timeout!</string>
    <string name="name_pwd_error">The user name or password is wrong</string>
    <string name="permission_insuff">Insufficient permissions</string>
    <string name="password_">Password</string>
    <string name="changepwd">Change User Password</string>
    <string name="pwd_user_id">Employee ID</string>
    <string name="new_password">Key in a new password</string>
    <string name="new_password_again">New password again</string>
    <string name="warning">Warning</string>
    <string name="new_password_no_same">New passwords keyed in are not same, please try again.</string>
    <string name="online_order">Online Order</string>
    <string name="have_online_order">You have a new online order</string>
    <string name="select_revenue_center">Your are eligible to serve\nin those revenue centers</string>
    <string name="failed_connect_server">Failed connect to </string>
    <string name="try_later">,Please try later</string>
    <string name="conn_time_out">Connection timed out</string>
    <string name="unknown_error">System Unknown Error</string>
    <string name="param_empty">Empty Param Error</string>
    <string name="param_error">Parameter Error</string>
    <string name="invalid_rest_key">Invalid restaurant access key</string>
    <string name="no_user">No User</string>
    <string name="incorrect_pwd">Incorrect password</string>
    <string name="invalid_user_key">Invalid user access key</string>
    <string name="login_other_devices">The account logined in on other devices</string>
    <string name="user_no_permission">User no permission</string>
    <string name="not_start_session">The revenue center does not start a session yet.</string>
    <string name="no_permissions">The POS device has no more permissions to serve in the revenue center, please contact restaurant manager</string>
    <string name="upgrade_new_version">Please upgrade your App to new version, which is compatible with main POS.</string>
    <string name="upgrade_app_version">Please upgrade your App to version  </string>
    <string name="comatible_pos">, which is compatible with main POS.</string>
    <string name="inclusive">Inclusive </string>
    <string name="app_update">APP Update</string>
    <string name="app_update_explain">New version is found. Are you sure to upgrade APP?</string>
    <string name="report_whole_day_sale">Whole Day Session</string>
    <string name="report_breakfast_sale">Breakfast Session</string>
    <string name="report_lunch_sale">Lunch Session</string>
    <string name="report_dinner_sale">Dinner Session</string>
    <string name="report_supper_sale">Supper Session</string>
    <string name="downloading">Downloading</string>
    <string name="num">ItemNum:</string>
    <string name="stored_card_null">QRcode cannot be empty</string>
    <string name="qrcode_error">Please scanning the correct QRcode</string>
    <string name="customer_no_card">Please binding with the Stored-Card</string>
    <string name="card_status_abnormal">User QRcode have abnormal</string>
    <string name="card_binding_mobile">User Stored-Card has binding App, please scans the QRcode on user phone</string>
    <string name="qrcode_expire">QRcode expire, please scans the QRcode on user phone</string>
    <string name="has_new_version">Found a new version</string>
    <string name="update">Update</string>
    <string name="next">Next Time</string>
    <string name="language_en">English</string>
    <string name="language_ch">China</string>
    <string name="language_in">Indonesia</string>
    <string name="language_th">Thailand</string>
    <string name="language_ph">Philippines</string>
    <string name="language_vi">Vietnam</string>
    <string name="language_ar">Arabic</string>
    <string name="scan_qr_servedalfred_order_byself">Scan QR Code by ServedByAlfred to select and send order by yourself</string>
    <string name="print_qrcode">Print QR Code</string>
    <string name="save_qrcode">Save QR Code</string>
    <string name="new_feature">New Feature</string>
</resources>