<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

   <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="2dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/select_report_print"
        android:textSize="@dimen/text_size_m" />
   

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_report_sales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sales_analysis" />

        <Button
            android:id="@+id/btn_report_detail_analysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_analysis" />

        <Button
            android:id="@+id/btn_report_summary_analysis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary_analysis" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_report_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/all" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>