<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_new_open_item_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/btn_new_open_item_back"
                android:layout_width="@dimen/dp90"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentLeft="true"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/new_open_item"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_new_open_item_save"
                android:layout_width="@dimen/dp90"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentRight="true"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m" />

                <EditText
                    android:id="@+id/et_new_open_item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_bg_a9a9a9"
                    android:gravity="center"
                    android:minEms="15"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#DDDDDD"
                    android:textSize="@dimen/text_size_b" 
                    android:inputType="textNoSuggestions"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/main_category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m" />

                <Spinner
                    android:id="@+id/sp_main_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/text_size_m" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/tax_group"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m" />

                <Spinner
                    android:id="@+id/sp_tax_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/text_size_m" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_takeaways"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/checkbox_takeaways"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discountable"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/checkbox_discoutable"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="5dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m" />

                <EditText
                    android:id="@+id/et_new_open_item_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/shape_bg_a9a9a9"
                    android:gravity="center"
                    android:inputType="numberDecimal"
                    android:minEms="15"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="#DDDDDD"
                    android:textSize="@dimen/text_size_b" 
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/sub_category"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m" />

                <Spinner
                    android:id="@+id/sp_sub_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/text_size_m" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/kitchen"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_m" />

                <Spinner
                    android:id="@+id/sp_kitchen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textSize="@dimen/text_size_m" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_delivery"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/checkbox_delivery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>