<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/ll_open_item_window"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <Button
                android:id="@+id/btn_open_item_back"
                android:layout_width="@dimen/dp90"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentLeft="true"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/open_items"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_open_item_new"
                android:layout_width="@dimen/dp90"
                android:layout_height="@dimen/dp50"
                android:layout_alignParentRight="true"
                android:background="@color/gray"
                android:gravity="center"
                android:text="@string/new_"
                android:textColor="@color/black" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#000000" />

        <ListView
            android:id="@+id/lv_orders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#000000"
            android:dividerHeight="2dp"
            android:scrollbars="none" />
    </LinearLayout>

</LinearLayout>